--- a/index.html
+++ b/index.html
@@ -1,47 +1,61 @@
-<!DOCTYPE html> <!-- Declara que este documento es HTML5 -->
-<html lang="es"> <!-- Elemento raíz que representa la totalidad de la página web, el atributo lang indica que el idioma principal de este documento es español -->
-
-<head> <!-- Contiene información general sobre el documento como el título y enlaces a scripts y estilos -->
-    <meta charset="UTF-8"> <!-- Define la codificación de caracteres para el documento -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura que la página se muestre correctamente en diferentes dispositivos -->
-    <title>Mi increíble página web</title> <!-- Define el título que se mostrará en la pestaña del navegador -->
-    <link rel="stylesheet" href="styles.css"> <!-- Enlaza el archivo de estilos CSS con el documento HTML -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Portafolio de Omar Hernandez Rey</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
-<body> <!-- Define el contenido principal del documento web -->
-
-    <header> <!-- Representa un contenedor de contenido introductorio o de navegación -->
-        <h1>Bienvenido a mi increíble página web</h1> <!-- Encabezado de nivel 1 -->
-    </header>
-
-    <nav> <!-- Sección de navegación del documento -->
-        <ul> <!-- Lista no ordenada -->
-            <li><a href="#section1">Inicio</a></li> <!-- Elemento de lista con un enlace a la sección 1 -->
-            <li><a href="#section2">Acerca de</a></li> <!-- Elemento de lista con un enlace a la sección 2 -->
-            <li><a href="#section3">Contacto</a></li> <!-- Elemento de lista con un enlace a la sección 3 -->
-        </ul>
+<body>
+  <header>
+    <h1>Omar Hernandez Rey</h1>
+    <nav>
+      <ul>
+        <li><a href="#biografia">Biografía</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
     </nav>
+  </header>
 
-    <main> <!-- Representa el contenido principal único del documento -->
-        <section id="section1"> <!-- Sección del documento con un identificador único "section1" -->
-            <h2>Inicio</h2> <!-- Encabezado de nivel 2 -->
-            <p>Bienvenido a la sección de inicio. Aquí encontrarás las últimas noticias y actualizaciones.</p> <!-- Párrafo de texto -->
-        </section>
+  <section id="biografia">
+    <h2>Biografía</h2>
+    <p>Soy un apasionado desarrollador de sistemas de información con experiencia en HTML, CSS, JavaScript, Node.js, MySQL y Git. Me encanta resolver problemas y trabajar en equipo. Soy una persona activa, responsable y puntual, siempre en busca de oportunidades para aprender y crecer tanto a nivel personal como profesional. Mi objetivo es contribuir al desarrollo de sistemas eficientes y de alta calidad.</p>
+  </section>
 
-        <section id="section2"> <!-- Sección del documento con un identificador único "section2" -->
-            <h2>Acerca de</h2> <!-- Encabezado de nivel 2 -->
-            <p>Este es un sitio web increíble que está diseñado para mostrarte lo fácil que es crear una página web.</p> <!-- Párrafo de texto -->
-        </section>
+  <section id="proyectos">
+    <h2>Proyectos</h2>
+    <p>A lo largo de mi carrera como desarrollador, he trabajado en diversos proyectos destacados, incluyendo:</p>
+    <ul>
+      <li>Desarrollo de un sistema de gestión de inventario para una empresa minorista.</li>
+      <li>Creación de una aplicación web de reserva de citas para una clínica médica.</li>
+      <li>Implementación de un sitio web responsivo para una agencia de viajes.</li>
+    </ul>
+  </section>
 
-        <section id="section3"> <!-- Sección del documento con un identificador único "section3" -->
-            <h2>Contacto</h2> <!-- Encabezado de nivel 2 -->
-            <p>Si tienes alguna pregunta o quieres saber más, no dudes en contactarme.</p> <!-- Párrafo de texto -->
-        </section>
-    </main>
+  <section id="habilidades">
+    <h2>Habilidades</h2>
+    <p>Mis habilidades técnicas incluyen:</p>
+    <ul>
+      <li>HTML5 y CSS3</li>
+      <li>JavaScript y frameworks como React.js</li>
+      <li>Node.js y Express.js</li>
+      <li>Bases de datos relacionales como MySQL</li>
+      <li>Control de versiones con Git</li>
+    </ul>
+  </section>
 
-    <footer> <!-- Representa el pie de página del documento -->
-        <p>© 2023 Mi increíble página web</p> <!-- Párrafo de texto -->
-    </footer>
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Puedes contactarme a través de los siguientes medios:</p>
+    <ul>
+      <li>Email: omar@example.com</li>
+      <li>Teléfono: +1234567890</li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/omarhernandez" target="_blank">linkedin.com/in/omarhernandez</a></li>
+    </ul>
+  </section>
 
+  <footer>
+    <p>&copy; 2023 Omar Hernandez Rey</p>
+  </footer>
 </body>
 </html>
