Agrege una foto mia en el header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <header>
-    <h1>Omar Hernandez Rey</h1>
+    
+   
     <nav>
       <ul>
         <li><a href="#biografia">Biografía</a></li>
@@ -14,6 +15,8 @@
         <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
+      <img src="imagenes/foto 3x4.jpg" alt="">
+      <h1>Omar Hernandez Rey</h1>
     </nav>
   </header>
 
