Agrege colores a los bacgraund al header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 </head>
 <body>
   <header>
-    
-   
     <nav>
       <ul>
         <li><a href="#biografia">Biografía</a></li>
@@ -17,9 +15,13 @@
       </ul>
       <img src="imagenes/foto 3x4.jpg" alt="">
       <h1>Omar Hernandez Rey</h1>
+      <span>omarhernandezrey@gmail.com</span>
+      <p id="desarrollador">
+          Desarrollador de sistemas de información 
+          <br> | Backend Developer | Frontent Developer 
+      <p>
     </nav>
-  </header>
-
+</header>
   <section id="biografia">
     <h2>Biografía</h2>
     <p>Soy un apasionado desarrollador de sistemas de información con experiencia en HTML, CSS, JavaScript, Node.js, MySQL y Git. Me encanta resolver problemas y trabajar en equipo. Soy una persona activa, responsable y puntual, siempre en busca de oportunidades para aprender y crecer tanto a nivel personal como profesional. Mi objetivo es contribuir al desarrollo de sistemas eficientes y de alta calidad.</p>
@@ -59,6 +61,48 @@
 
   <footer>
     <p>&copy; 2023 Omar Hernandez Rey</p>
+ 
+    <ul class="social-icons">
+      <li>
+          <a href="https://www.linkedin.com/in/omar-hernandez-a061a01a4/" class="social-icon" id="Linkedin">
+              <!-- Enlace a LinkedIn -->
+              <img src="imagenes/iconos/linkedin.png" alt="linkedin">
+              <!-- Icono de LinkedIn con la ruta "imagenes/iconos/linkedin.png" y un atributo alt para accesibilidad -->
+          </a>
+      </li>
+
+      <li>
+          <a href="https://github.com/omarhernandezrey" class="social-icon" id="Github">
+              <!-- Enlace a GitHub -->
+              <img src="imagenes/iconos/github.png" alt="Github">
+              <!-- Icono de GitHub con la ruta "imagenes/icons/github.png" y un atributo alt para accesibilidad -->
+          </a>
+      </li>
+
+      <li>
+          <a href="https://twitter.com/o43503368" class="social-icon" id="Twitter">
+              <!-- Enlace a Twitter -->
+              <img src="imagenes/iconos/twitter.png" alt="Twitter">
+              <!-- Icono de Twitter con la ruta "imagenes/iconos/twitter.png" y un atributo alt para accesibilidad -->
+          </a>
+      </li>
+
+      <li>
+          <a href="https://www.youtube.com/channel/UCTZFAzSm3V3Mt3v1Xqv9Oxg" class="social-icon" id="YouTube">
+              <!-- Enlace a YouTube -->
+              <img src="imagenes/iconos/youtube.png" alt="YouTube">
+              <!-- Icono de YouTube con la ruta "imagenes/iconos/youtube.png" y un atributo alt para accesibilidad -->
+          </a>
+      </li>
+
+      <li>
+          <a href="https://platzi.com/p/omarrey/" class="social-icon" id="Platzi">
+              <!-- Enlace a Platzi -->
+              <img src="imagenes/iconos/platzi.png" alt="Platzi">
+              <!-- Icono de Platzi con la ruta "imagenes/iconos/platzi.png" y un atributo alt para accesibilidad -->
+          </a>
+      </li>
+  </ul>
   </footer>
 </body>
 </html>
