Agrege el link de protectos turnos de enfermeria

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
   <section id="proyectos">
     <h2>Proyectos</h2>
+    <a href="https://omarhernandezrey.github.io/calculadoraDePagoTurnosEmfermeria.github.io/"></a>
     <p>A lo largo de mi carrera como desarrollador, he trabajado en diversos proyectos destacados, incluyendo:</p>
     <ul>
-      <li>Desarrollo de un sistema de gestión de inventario para una empresa minorista.</li>
+      <li>Desarrollo de un sistema para ingrsar los tunos realizados para dar como resultado el pago de la mesualidad ademas arroja un calendario que indica los dias que la enfermera realizp los turnos con nombre y si es diurno o nocturno.</li>
+      <a href="https://omarhernandezrey.github.io/calculadoraDePagoTurnosEmfermeria.github.io/">Go turnos pago de enfermeria</a>
       <li>Creación de una aplicación web de reserva de citas para una clínica médica.</li>
       <li>Implementación de un sitio web responsivo para una agencia de viajes.</li>
     </ul>
