--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="https://omarhernandezrey.github.io/calculadoraDePagoTurnosEmfermeria.github.io/"></a>
     <p>A lo largo de mi carrera como desarrollador, he trabajado en diversos proyectos destacados, incluyendo:</p>
     <ul>
-      <li>Desarrollo de un sistema para ingrsar los tunos realizados para dar como resultado el pago de la mesualidad ademas arroja un calendario que indica los dias que la enfermera realizp los turnos con nombre y si es diurno o nocturno.</li>
+      <li>"Desarrollo de un sistema para ingresar los turnos realizados, con el fin de calcular el pago mensual. Además, arroja un calendario que indica los días en que la enfermera realizó los turnos, incluyendo el nombre y si son turnos diurnos, nocturnos y festivos."</li>
       <a href="https://omarhernandezrey.github.io/calculadoraDePagoTurnosEmfermeria.github.io/">Go turnos pago de enfermeria</a>
       <li>Creación de una aplicación web de reserva de citas para una clínica médica.</li>
       <li>Implementación de un sitio web responsivo para una agencia de viajes.</li>
