agrege a la seccion proyectos un contenedor padre con elemetos hijos con css flexbox y grid

--- a/index.html
+++ b/index.html
@@ -28,12 +28,25 @@
   </section>
 
   <section id="proyectos">
+
     <h2>Proyectos</h2>
-    <a href="https://omarhernandezrey.github.io/calculadoraDePagoTurnosEmfermeria.github.io/"></a>
     <p>A lo largo de mi carrera como desarrollador, he trabajado en diversos proyectos destacados, incluyendo:</p>
+    <div class="container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <ul>
       <li>"Desarrollo de un sistema para ingresar los turnos realizados, con el fin de calcular el pago mensual. Además, arroja un calendario que indica los días en que la enfermera realizó los turnos, incluyendo el nombre y si son turnos diurnos, nocturnos y festivos."</li>
+      
       <a href="https://omarhernandezrey.github.io/calculadoraDePagoTurnosEmfermeria.github.io/">Go turnos pago de enfermeria</a>
+     
       <li>Creación de una aplicación web de reserva de citas para una clínica médica.</li>
       <li>Implementación de un sitio web responsivo para una agencia de viajes.</li>
     </ul>
