Modifique las tarjetas en el html y css para que sea mas atractivo

--- a/index.html
+++ b/index.html
@@ -31,17 +31,84 @@
 
     <h2>Proyectos</h2>
     <p>A lo largo de mi carrera como desarrollador, he trabajado en diversos proyectos destacados, incluyendo:</p>
-    <div class="container">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+    <body>
+	
+      <div class="contenedor">
+          <div class="contenedor-cards">            
+            <div class="contenedor-card-item">
+                <div class="contenedor-card-item-wrapper">
+                  <img src="imagenes/proyecto1.jpg" alt="">
+                  <div class="contenedor-info">
+                      <div class="info">
+                        <p class="titulo">Titulo</p>
+                        <span class="categoria">Categoría</span>
+                      </div>
+                      <div class="fondo"></div>
+                  </div>
+                </div>
+            </div>
+            <div class="contenedor-card-item">
+                <div class="contenedor-card-item-wrapper">
+                  <img src="imagenes/computadora.jpg" alt="">
+                  <div class="contenedor-info">
+                      <div class="info">
+                        <p class="titulo">Titulo</p>
+                        <span class="categoria">Categoría</span>
+                      </div>
+                      <div class="fondo"></div>
+                  </div>
+                </div>
+            </div>
+            <div class="contenedor-card-item">
+                <div class="contenedor-card-item-wrapper">
+                  <img src="https://images.unsplash.com/photo-1456324504439-367cee3b3c32" alt="">
+                  <div class="contenedor-info">
+                      <div class="info">
+                        <p class="titulo">Titulo</p>
+                        <span class="categoria">Categoría</span>
+                      </div>
+                      <div class="fondo"></div>
+                  </div>
+                </div>
+            </div>
+            <div class="contenedor-card-item">
+                <div class="contenedor-card-item-wrapper">
+                  <img src="https://images.unsplash.com/photo-1440335680360-79703e7032f9" alt="">
+                  <div class="contenedor-info">
+                      <div class="info">
+                        <p class="titulo">Titulo</p>
+                        <span class="categoria">Categoría</span>
+                      </div>
+                      <div class="fondo"></div>
+                  </div>
+                </div>
+            </div>
+            <div class="contenedor-card-item">
+                <div class="contenedor-card-item-wrapper">
+                  <img src="https://images.unsplash.com/photo-1455461491901-a0990c10d84c" alt="">
+                  <div class="contenedor-info">
+                      <div class="info">
+                        <p class="titulo">Titulo</p>
+                        <span class="categoria">Categoría</span>
+                      </div>
+                      <div class="fondo"></div>
+                  </div>
+                </div>
+            </div>
+            <div class="contenedor-card-item">
+                <div class="contenedor-card-item-wrapper">
+                  <img src="https://images.unsplash.com/photo-1454997423871-b5215756e54d" alt="">
+                  <div class="contenedor-info">
+                      <div class="info">
+                        <p class="titulo">Titulo</p>
+                        <span class="categoria">Categoría</span>
+                      </div>
+                      <div class="fondo"></div>
+                  </div>
+                </div>
+            </div>
+           </div>
+      </div>
     <ul>
       <li>"Desarrollo de un sistema para ingresar los turnos realizados, con el fin de calcular el pago mensual. Además, arroja un calendario que indica los días en que la enfermera realizó los turnos, incluyendo el nombre y si son turnos diurnos, nocturnos y festivos."</li>
       
