--- a/index.html
+++ b/index.html
@@ -7,19 +7,42 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="#biografia">Biografía</a></li>
-        <li><a href="#proyectos">Proyectos</a></li>
-        <li><a href="#habilidades">Habilidades</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-      <img src="imagenes/foto 3x4.jpg" alt="">
-      <h1>Omar Hernandez Rey</h1>
-      <span>omarhernandezrey@gmail.com</span>
-      <p id="desarrollador">
-          Desarrollador de sistemas de información 
-          <br> | Backend Developer | Frontent Developer 
-      <p>
+      <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+  
+      <div class="navbar-left">
+        <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+  
+        <ul>
+          <li>
+            <a href="/">All</a>
+          </li>
+          <li>
+            <a href="/">Clothes</a>
+          </li>
+          <li>
+            <a href="/">Electronics</a>
+          </li>
+          <li>
+            <a href="/">Furnitures</a>
+          </li>
+          <li>
+            <a href="/">Toys</a>
+          </li>
+          <li>
+            <a href="/">Others</a>
+          </li>
+        </ul>
+      </div>
+  
+      <div class="navbar-right">
+        <ul>
+          <li class="navbar-email">platzi@example.com</li>
+          <li class="navbar-shopping-cart">
+            <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
+            <div>2</div>
+          </li>
+        </ul>
+      </div>
     </nav>
 </header>
   <section id="biografia">
