--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
         <img src="./imagenes/logo.jpg" alt="logo" class="logo">
         <div class="navbar-left">
-            <img src="./imagenes/iconos/icon_menu.svg" alt="menu" class="menu">
+            <img src="./imagenes/iconos/icons8-menú.svg" alt="menu" class="menu">
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#biografia">Biografía</a></li>
