boton animado nav dispositivo mobil

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     <nav>
         <img src="./imagenes/logo.jpg" alt="logo" class="logo">
         <div class="navbar-left">
-            <img src="./imagenes/iconos/icons8-menú.svg" alt="menu" class="menu">
+            <input type="checkbox" id="menu-check" />
+            <label for="menu-check">
+              <div class="btn-menu"> 
+                <div class="stick1"></div>
+                <div class="stick2"></div>
+                <div class="stick3"></div>
+              </div>
+            </label>
+
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#biografia">Biografía</a></li>
