Create mobile menu and js on the button to make it appear and disappear

--- a/index.html
+++ b/index.html
@@ -37,6 +37,33 @@
             </ul>
         </div>
     </nav>
+ <!------Menu mobile----->
+      <div class="desktop-menu inactive">
+    <ul>
+      <li>
+        <a href="#home" class="title">Home</a>
+      </li>
+
+      <li>
+        <a href="#biografia">Biografía</a>
+      </li>
+      <li>
+        <a href="#proyectos" class="title">Proyectos</a>
+      </li>
+
+      <li>
+        <a href="#habilidades">Habilidades</a>
+      </li>
+      <li>
+        <a href="#contacto" class="title">Contacto</a>
+      </li>
+
+      <li>
+        <a href="/">Sign out</a>
+      </li>
+    </ul>
+  </div>
+
 </header>
 <!-- ------------------- -->
 
